--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Should learn scripting</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Fedal.nl</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-   <h1 id="heading">My first project will be here and on mobile apps called Spanglish. </h1>
-   <h2> It's a spanish language learning app</h2>
+  <div class="container-fluid bg-light">
+   <h3>My first project will be here and on mobile apps called Spanglish. </h1>
+    <hr></hr>
    <p> The project will be created using: </p>
    <ul>
-     <li>Python Django restframework API as backend</li>
-     <li>React for the front-end </li>
+     <li>Python FastAPI as backend</li>
+     <li>ReactJS for the front-end webiste </li>
      <li>React Native for mobile and tablets applications</li>
-     <li>MySql as database</li>
+     <li>AWS RDS (MySQL) and DynamoDB as databases</li>
+     <li>The backend will be hosted on AWS Fargate</li>
+     <li>The front-end will be hosted on AWS Amplify</li>
    </ul>
-   <img src="/img/reading.jpg"/>
-<p>The whole project will be in Github available for everyone</p>
-<p>&copy; 2020 fedal.nl</p>
+   </div>
+   <div class="container-fluid bg-light">
+    <p>The whole project will be in Github available for everyone</p>
+    <p>&copy; 2021 fedal.nl</p>
+   </div>
+
 </body>
 </html> 
